arr/seerr/seerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: arr
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/part-of: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: seerr
      app.kubernetes.io/part-of: arr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seerr
        app.kubernetes.io/part-of: arr
    spec:
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.1.0
          ports:
            - containerPort: 5055
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - mountPath: /app/config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seerr
