arr/seerr/seerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: arr
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/part-of: arr
spec:
  selector:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/part-of: arr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
