arr/seerr/seerr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
  namespace: arr
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/part-of: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`request.flexflix.top`)
      kind: Rule
      services:
        - name: seerr
          port: 5055
